--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 <html>
 <head>
 </head>
-<body>
-<p align="center"><h1><font color="BLUE"><b>LICEO DELLE SCIENZE APPLICATE GALILEO GALILEI</b></font></p>
+<body bgcolor="#FFEFD5">
+<p align="center"><h1><font color="BLUE"><b>LICEO DELLE SCIENZE APPLICATE GALILEO GALILEI</b></font></h1></p>
 <hr color="RED">
+<p align="center"><h2><font color="#A0CE00"Programma per il primo anno</font></h2></p>
+<p align="left"><h3>materie di studio</h3></p>
 </body>
 </html>
