--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 <head>
 </head>
 <body bgcolor="#FFEFD5">
-<p align="center"><h1><font color="BLUE"><b>LICEO DELLE SCIENZE APPLICATE GALILEO GALILEI</b></font></h1></p>
+<p align="center"><h1><font color="LIGHTBLUE"><b>L'ISOLA D'ELBA</b></font></h1></p>
 <hr color="RED">
-<p align="center"><h2><font color="#A0CE00"Programma per il primo anno</font></h2></p>
-<p align="left"><h3>materie di studio</h3></p>
+<p align="center"><h2>una delle possibili mete al viaggio d'istruzione durante il primo anno dell'<font color="BLUE">I.I.S GALILEO GALILEI</font> e' l'isola d'Elba</p>
+<a href="costi.html"><img src="http://image.nanopress.it/625X0/soldi/nanopress/it/img/conto-corrente-cambiarlo-conviene.jpg" with"600" height"600" hspace="35" vspace="35></a>
+
+
 </body>
 </html>
